--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html,
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+}
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -15,6 +21,21 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.leaflet-container {
+    height: 78vh;
+    width: 100%;
+    z-index: 500;
+    border-radius: 0.5rem;
+    padding: 0.75rem;
+}
+.max-h-80p {
+    max-height: 80vh;
+}
+
+#map {
+    height: 75vh;
 }
 
 a {
