:construction: major updates

--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -8,6 +8,11 @@ body {
     padding: 0px;
     margin: 0px;
 }
+
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+    background-color: #111827;
+}
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
