--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -36,60 +36,37 @@ body {
     padding: 0.75rem;
 }
 .max-h-80p {
-    max-height: 80vh;
+    max-height: 89vh;
+}
+
+.swiper {
+    width: 100%;
+    height: 20vh;
+}
+
+.swiper-big {
+    width: 100%;
+    height: 40vh;
+}
+
+.swiper .swiper-slide {
+    height: auto;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #map {
-    height: 75vh;
-}
-
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
-button {
-    border-radius: 10%;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
-
-.race_card {
-    margin-top: 1rem;
-    padding-bottom: 1rem;
-    border: 1px solid lightgray;
-    border-radius: 20%;
-}
-
-.race_card:hover {
-    border-color: #646cff;
+    height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
         background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
     }
 }
