--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -28,6 +28,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 .leaflet-container {
     height: 78vh;
     width: 100%;
