--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1463,6 +1463,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline {
+  outline-style: solid;
+}
+
 .ring-offset-gray-800 {
   --tw-ring-offset-color: #1f2937;
 }
