--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -15,7 +15,8 @@ body {
     background-color: #111827;
 }
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial,
+        sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
