--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -622,6 +622,10 @@ video {
   top: 4rem;
 }
 
+.-top-96 {
+  top: -24rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -774,6 +778,18 @@ video {
   margin-top: 1.5rem;
 }
 
+.-mb-2\.5 {
+  margin-bottom: -0.625rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -830,8 +846,20 @@ video {
   max-height: 50vh;
 }
 
+.max-h-\[35vh\] {
+  max-height: 35vh;
+}
+
+.max-h-\[42vh\] {
+  max-height: 42vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[42vh\] {
+  min-height: 42vh;
 }
 
 .w-2\.5 {
@@ -874,6 +902,26 @@ video {
   min-width: 100%;
 }
 
+.min-w-12 {
+  min-width: 3rem;
+}
+
+.min-w-36 {
+  min-width: 9rem;
+}
+
+.min-w-72 {
+  min-width: 18rem;
+}
+
+.min-w-48 {
+  min-width: 12rem;
+}
+
+.min-w-40 {
+  min-width: 10rem;
+}
+
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -900,6 +948,10 @@ video {
 
 .max-w-screen-lg {
   max-width: 1024px;
+}
+
+.max-w-0 {
+  max-width: 0px;
 }
 
 .cursor-pointer {
@@ -1290,6 +1342,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1370,6 +1426,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1424,6 +1490,14 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-left {
@@ -1774,6 +1848,22 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:absolute {
+    position: absolute;
+  }
+
+  .sm\:relative {
+    position: relative;
+  }
+
+  .sm\:-top-96 {
+    top: -24rem;
+  }
+
+  .sm\:top-0 {
+    top: 0px;
+  }
+
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1787,12 +1877,25 @@ body {
     display: flex;
   }
 
+  .sm\:max-w-0 {
+    max-width: 0px;
+  }
+
+  .sm\:max-w-36 {
+    max-width: 9rem;
+  }
+
   .sm\:items-center {
     align-items: center;
   }
 
   .sm\:justify-between {
     justify-content: space-between;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .sm\:text-center {
@@ -1824,7 +1927,85 @@ body {
   }
 }
 
+@media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:-top-96 {
+    top: -24rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:max-h-\[90vh\] {
+    max-height: 90vh;
+  }
+
+  .lg\:min-h-\[90vh\] {
+    min-height: 90vh;
+  }
+
+  .lg\:max-w-36 {
+    max-width: 9rem;
+  }
+
+  .lg\:max-w-0 {
+    max-width: 0px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:border-t-0 {
+    border-top-width: 0px;
+  }
+
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
+  }
+
+  .lg\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .lg\:pr-2 {
+    padding-right: 0.5rem;
+  }
+
+  .lg\:pr-6 {
+    padding-right: 1.5rem;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+}
+
 @media (min-width: 1280px) {
+  .xl\:relative {
+    position: relative;
+  }
+
+  .xl\:top-0 {
+    top: 0px;
+  }
+
   .xl\:mt-0 {
     margin-top: 0px;
   }
@@ -1837,8 +2018,16 @@ body {
     max-height: 90vh;
   }
 
+  .xl\:max-w-36 {
+    max-width: 9rem;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
   }
 
   .xl\:items-start {
@@ -1867,6 +2056,22 @@ body {
 
   .xl\:pt-0 {
     padding-top: 0px;
+  }
+
+  .xl\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .xl\:pr-0 {
+    padding-right: 0px;
+  }
+
+  .xl\:pr-1 {
+    padding-right: 0.25rem;
+  }
+
+  .xl\:pr-2 {
+    padding-right: 0.5rem;
   }
 }
 
